# fake-exposure

./: .gitignore  README.md  fake_exposure  pyproject.toml  setup.cfg
fakelongexposure/: __init__.py  __main__.py  fakelongexposure.py
