[metadata]
name = fakelongexposure
description = Create long exposure night photos from videos.
url = https://github.com/JesseMFrey/fake-exposure

[options]
packages = find:
install_requires =
    opencv
include_package_data = True


[options.entry_points]
console_scripts =
    fakelongexposure = fakelongexposure:main

